# HTOTW

./: .gitignore  Cargo.toml  README.md
docs/: ASSUMPTIONS.md  ENGINE.md  RESEARCH.md
societies/: egalitarian-green.soc  extractive-autocracy.soc  laissez-faire.soc  open-frontier.soc  stewardship-commons.soc
src/: calibrate.rs  config.rs  dynamics.rs  economy.rs  effects.rs  governance.rs  lib.rs  main.rs  policies.rs  policy.rs  render.rs  rng.rs  scenario.rs  sim.rs  society.rs  state.rs  util.rs  world.rs
src/engine/: calibration.rs  counterfactual.rs  institutions.rs  instruments.rs  mod.rs  parallel.rs  polity.rs  rng.rs  society.rs  trace.rs  world.rs
tests/: coverage.rs  integration.rs
worldsim/: Cargo.toml  README.md
worldsim/src/: config.rs  constants.rs  economy.rs  lib.rs  main.rs  measure.rs  people.rs  planet.rs  render.rs  search.rs  world.rs
