[package]
name = "worldsim"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kolmans <thomas.kolmans@n0name.eu>"]
description = "A first-principles planetary simulator: physics, ecology and human psychology drive the world; societies (laws, institutions, structures) are configurable inputs; outcomes are measured, never set; a search layer finds the best-measured way to operate the world."
license = "MIT"

[lib]
name = "worldsim"
path = "src/lib.rs"

[[bin]]
name = "worldsim"
path = "src/main.rs"

# Dependency-free on purpose: reproducibility, fast builds, no hidden models.
[dependencies]
